// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ObraCard Snapshot > should match snapshot with category 1`] = `
<div
  style="opacity: 0; transform: translateY(20px);"
>
  <a
    href="/obra/1"
  >
    <div
      class="rounded-lg border bg-card text-card-foreground shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer h-full"
    >
      <div
        class="relative aspect-video w-full"
      >
        <img
          alt="Casa Moderna"
          class="object-cover"
          data-nimg="fill"
          decoding="async"
          loading="eager"
          sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
          src="http://localhost:3000/_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=3840&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=256&q=75 256w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=384&q=75 384w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=640&q=75 640w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=750&q=75 750w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=828&q=75 828w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=1080&q=75 1080w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=1200&q=75 1200w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=1920&q=75 1920w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=2048&q=75 2048w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=3840&q=75 3840w"
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
        />
      </div>
      <div
        class="p-6"
      >
        <div
          class="flex items-start justify-between gap-2 mb-2"
        >
          <h2
            class="text-xl font-semibold text-calypso flex-1"
          >
            Casa Moderna
          </h2>
          <span
            class="text-xs px-2 py-1 bg-calypso/10 text-calypso rounded-full whitespace-nowrap"
          >
            Vivienda
          </span>
        </div>
        <p
          class="text-muted-foreground line-clamp-3"
        >
          Una hermosa casa moderna con diseño contemporáneo y grandes ventanales
        </p>
      </div>
    </div>
  </a>
</div>
`;

exports[`ObraCard Snapshot > should match snapshot with image 1`] = `
<div
  style="opacity: 0; transform: translateY(20px);"
>
  <a
    href="/obra/1"
  >
    <div
      class="rounded-lg border bg-card text-card-foreground shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer h-full"
    >
      <div
        class="relative aspect-video w-full"
      >
        <img
          alt="Casa Moderna"
          class="object-cover"
          data-nimg="fill"
          decoding="async"
          loading="eager"
          sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
          src="http://localhost:3000/_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=3840&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=256&q=75 256w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=384&q=75 384w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=640&q=75 640w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=750&q=75 750w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=828&q=75 828w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=1080&q=75 1080w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=1200&q=75 1200w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=1920&q=75 1920w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=2048&q=75 2048w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=3840&q=75 3840w"
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
        />
      </div>
      <div
        class="p-6"
      >
        <div
          class="flex items-start justify-between gap-2 mb-2"
        >
          <h2
            class="text-xl font-semibold text-calypso flex-1"
          >
            Casa Moderna
          </h2>
          <span
            class="text-xs px-2 py-1 bg-calypso/10 text-calypso rounded-full whitespace-nowrap"
          >
            Vivienda
          </span>
        </div>
        <p
          class="text-muted-foreground line-clamp-3"
        >
          Una hermosa casa moderna con diseño contemporáneo y grandes ventanales
        </p>
      </div>
    </div>
  </a>
</div>
`;

exports[`ObraCard Snapshot > should match snapshot without category 1`] = `
<div
  style="opacity: 0; transform: translateY(20px);"
>
  <a
    href="/obra/1"
  >
    <div
      class="rounded-lg border bg-card text-card-foreground shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer h-full"
    >
      <div
        class="relative aspect-video w-full"
      >
        <img
          alt="Casa Moderna"
          class="object-cover"
          data-nimg="fill"
          decoding="async"
          loading="eager"
          sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
          src="http://localhost:3000/_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=3840&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=256&q=75 256w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=384&q=75 384w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=640&q=75 640w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=750&q=75 750w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=828&q=75 828w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=1080&q=75 1080w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=1200&q=75 1200w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=1920&q=75 1920w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=2048&q=75 2048w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=3840&q=75 3840w"
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
        />
      </div>
      <div
        class="p-6"
      >
        <div
          class="flex items-start justify-between gap-2 mb-2"
        >
          <h2
            class="text-xl font-semibold text-calypso flex-1"
          >
            Casa Moderna
          </h2>
        </div>
        <p
          class="text-muted-foreground line-clamp-3"
        >
          Una hermosa casa moderna con diseño contemporáneo y grandes ventanales
        </p>
      </div>
    </div>
  </a>
</div>
`;

exports[`ObraCard Snapshot > should match snapshot without image 1`] = `
<div
  style="opacity: 0; transform: translateY(20px);"
>
  <a
    href="/obra/1"
  >
    <div
      class="rounded-lg border bg-card text-card-foreground shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer h-full"
    >
      <div
        class="aspect-video bg-muted flex items-center justify-center"
      >
        <p
          class="text-muted-foreground"
        >
          Sin imagen
        </p>
      </div>
      <div
        class="p-6"
      >
        <div
          class="flex items-start justify-between gap-2 mb-2"
        >
          <h2
            class="text-xl font-semibold text-calypso flex-1"
          >
            Casa Moderna
          </h2>
          <span
            class="text-xs px-2 py-1 bg-calypso/10 text-calypso rounded-full whitespace-nowrap"
          >
            Vivienda
          </span>
        </div>
        <p
          class="text-muted-foreground line-clamp-3"
        >
          Una hermosa casa moderna con diseño contemporáneo y grandes ventanales
        </p>
      </div>
    </div>
  </a>
</div>
`;
